[project]
name = "paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decord>=0.6.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.0.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.0",
    "transformers>=4.52.0",
]
